--- a/src/components/Expense/css/ExpenseItem.css
+++ b/src/components/Expense/css/ExpenseItem.css
@@ -18,16 +18,15 @@
     }
 
     .expense-item__description h2 {
-        @apply text-xl font-bold;
+        @apply text-lg font-bold;
     }
     
     .expense-item__description {
-        @apply flex flex-col-reverse gap-3 items-end justify-start flex-1;
+        @apply flex gap-3 items-center justify-start flex-1;
     }
     
     .expense-item__price {
-        @apply text-lg font-bold text-white border border-white p-2;
-        background-color: #40005d;
+        @apply text-xs font-bold text-white border border-white p-2 bg-[#40005d];
     }
 
 
